--- a/fhaque3/mp2/grades/full_01.html
+++ b/fhaque3/mp2/grades/full_01.html
@@ -72,6 +72,7 @@
             <div class="panel panel-default">
               <div class="panel-heading"><h4 class="panel-title">Errors</h4></div>
               <ul>
+                <li>Required assignment file &quot;Image.h&quot; does not exist in SVN.</li>
                 <li>Required assignment file &quot;Image.cpp&quot; does not exist in SVN.</li>
                 <li>Required assignment file &quot;StickerSheet.h&quot; does not exist in SVN.</li>
                 <li>Required assignment file &quot;StickerSheet.cpp&quot; does not exist in SVN.</li>
