--- a/mp2/grades/nightly_07_plus1.html
+++ b/mp2/grades/nightly_07_plus1.html
@@ -73,9 +73,9 @@
                 <div class="panel-heading collapsed" data-toggle="collapse" data-target="#panel-0" style="cursor: pointer;">
                   <div class="panel-heading-left">
                     <h4 class="panel-title">
-                      <span class="glyphicon glyphicon-ok" aria-hidden="true" style="color: #4CAF50"></span>
-                      <span style="color: #4CAF50; margin-left: 5px;"><strong>[0/0]</strong></span>
-                      <span style="margin-left: 5px;">Output from &#x60;make&#x60;</span>
+                      <span class="glyphicon glyphicon-remove" aria-hidden="true" style="color: #F44336"></span>
+                      <span style="color: #F44336; margin-left: 5px;"><strong>[0/1]</strong></span>
+                      <span style="margin-left: 5px;">undefined</span>
                     </h4>
                   </div>
                   <div class="panel-heading-right">
@@ -85,33 +85,10 @@
                 <div id="panel-0" class="panel-collapse collapse">
                   <ul class="list-group">
                     <li class="list-group-item"><strong>Max points:</strong> 0</li>
-                    <li class="list-group-item"><strong>Earned points:</strong> 0</li>
-                      <li class="list-group-item">
-                        <div><strong>Message</strong></div>
-                        <pre style="background: black; white-space: pre-wrap; overflow-y: auto; overflow-x: hidden; max-height: 200px"><code style="color: white; font-family: monospace;">Image.cpp:177:15: warning: unused variable &#x27;oldheight&#x27; [-Wunused-variable]
-        unsigned int oldheight&#x3D;this-&gt;height();
-                     ^
-Image.cpp:176:15: warning: unused variable &#x27;oldwidth&#x27; [-Wunused-variable]
-        unsigned int oldwidth&#x3D;this-&gt;width();
-                     ^
-Image.cpp:228:30: warning: unused parameter &#x27;w&#x27; [-Wunused-parameter]
-  void Image::scale(unsigned w, unsigned h){
-                             ^
-Image.cpp:228:42: warning: unused parameter &#x27;h&#x27; [-Wunused-parameter]
-  void Image::scale(unsigned w, unsigned h){
-                                         ^
-4 warnings generated.
-</code></pre>
-                      </li>
+                    <li class="list-group-item"><strong>Earned points:</strong> 1</li>
                       <li class="list-group-item">
                         <div><strong>Output</strong></div>
-                        <pre style="background: black; white-space: pre-wrap; overflow-y: auto; overflow-x: hidden; max-height: 200px;"><code style="color: white; font-family: monospace;">clang++ -std&#x3D;c++1y -stdlib&#x3D;libc++ -c -g -O0 -Wall -Wextra -pedantic cs225/PNG.cpp
-clang++ -std&#x3D;c++1y -stdlib&#x3D;libc++ -c -g -O0 -Wall -Wextra -pedantic cs225/HSLAPixel.cpp
-clang++ -std&#x3D;c++1y -stdlib&#x3D;libc++ -c -g -O0 -Wall -Wextra -pedantic cs225/lodepng/lodepng.cpp
-clang++ -std&#x3D;c++1y -stdlib&#x3D;libc++ -c -g -O0 -Wall -Wextra -pedantic Image.cpp
-clang++ -std&#x3D;c++1y -stdlib&#x3D;libc++ -c -g -O0 -Wall -Wextra -pedantic tests/unit_tests.cpp
-clang++ unit_tests.o PNG.o HSLAPixel.o lodepng.o Image.o -std&#x3D;c++1y -stdlib&#x3D;libc++ -lc++abi -lpthread -lm -o test
-</code></pre>
+                        <pre style="background: black; white-space: pre-wrap; overflow-y: auto; overflow-x: hidden; max-height: 200px;"><code style="color: white; font-family: monospace;">Error: Output exceeds buffer.</code></pre>
                       </li>
                   </ul>
                 </div>
@@ -408,8 +385,7 @@ Expanded: 0.0 &gt; 40</code></pre>
                     <li class="list-group-item"><strong>Earned points:</strong> 1</li>
                       <li class="list-group-item">
                         <div><strong>Output</strong></div>
-                        <pre style="background: black; white-space: pre-wrap; overflow-y: auto; overflow-x: hidden; max-height: 200px;"><code style="color: white; font-family: monospace;">Original: result.getPixel(30, 5)-&gt;h &gt; 260
-Expanded: 35.0 &gt; 260 (0x104)</code></pre>
+                        <pre style="background: black; white-space: pre-wrap; overflow-y: auto; overflow-x: hidden; max-height: 200px;"><code style="color: white; font-family: monospace;">Error: Output exceeds buffer.</code></pre>
                       </li>
                   </ul>
                 </div>
@@ -460,31 +436,6 @@ Expanded: 360 (0x168) &#x3D;&#x3D; 36</code></pre>
                         <div><strong>Output</strong></div>
                         <pre style="background: black; white-space: pre-wrap; overflow-y: auto; overflow-x: hidden; max-height: 200px;"><code style="color: white; font-family: monospace;">Original: result.height() &#x3D;&#x3D; 120
 Expanded: 100 &#x3D;&#x3D; 120</code></pre>
-                      </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="panel panel-default">
-                <div class="panel-heading collapsed" data-toggle="collapse" data-target="#panel-17" style="cursor: pointer;">
-                  <div class="panel-heading-left">
-                    <h4 class="panel-title">
-                      <span class="glyphicon glyphicon-remove" aria-hidden="true" style="color: #F44336"></span>
-                      <span style="color: #F44336; margin-left: 5px;"><strong>[0/1]</strong></span>
-                      <span style="margin-left: 5px;">Image scale(w * 0.5, h * 0.5) scales the image in a reasonable way</span>
-                    </h4>
-                  </div>
-                  <div class="panel-heading-right">
-                    <span class="glyphicon glyphicon-chevron-down"></span>
-                  </div>
-                </div>
-                <div id="panel-17" class="panel-collapse collapse">
-                  <ul class="list-group">
-                    <li class="list-group-item"><strong>Max points:</strong> 0</li>
-                    <li class="list-group-item"><strong>Earned points:</strong> 1</li>
-                      <li class="list-group-item">
-                        <div><strong>Output</strong></div>
-                        <pre style="background: black; white-space: pre-wrap; overflow-y: auto; overflow-x: hidden; max-height: 200px;"><code style="color: white; font-family: monospace;">Original: result.getPixel(100, 20)-&gt;h &gt; 180
-Expanded: 100.0 &gt; 180</code></pre>
                       </li>
                   </ul>
                 </div>
